--- a/UmbracoCMS/wwwroot/css/scss/sections/home/_aboutSection.scss
+++ b/UmbracoCMS/wwwroot/css/scss/sections/home/_aboutSection.scss
@@ -1,4 +1,5 @@
 #about-section {
+    padding-bottom: 20px;
     margin-bottom: 50px;
 
     @include desktop {
