--- a/UmbracoCMS/wwwroot/css/scss/sections/home/_projectsSection.scss
+++ b/UmbracoCMS/wwwroot/css/scss/sections/home/_projectsSection.scss
@@ -64,8 +64,10 @@
                 opacity: 1;
             }
 
-            &:hover img {
-                transform: scale(1.1);
+            @include desktop {
+                &:hover img {
+                    transform: scale(1.1);
+                }
             }
         }
     }
