--- a/UmbracoCMS/wwwroot/css/scss/sections/home/_successStoriesSection.scss
+++ b/UmbracoCMS/wwwroot/css/scss/sections/home/_successStoriesSection.scss
@@ -58,7 +58,10 @@
                 h2 {
                     color: var(--color-secondary);
                     margin-bottom: 0;
-                    font-size: 80px;
+
+                    @include desktop {
+                        font-size: 80px;
+                    }
                 }
 
                 p {
@@ -71,6 +74,7 @@
     #img-container {
         img {
             display: none;
+
             @include desktop {
                 display: block;
                 position: absolute;
