--- a/UmbracoCMS/wwwroot/css/scss/sections/services/_mainContent.scss
+++ b/UmbracoCMS/wwwroot/css/scss/sections/services/_mainContent.scss
@@ -52,10 +52,13 @@
                 img {
                     width: 100%;
                     height: auto;
-                    transition: transform 0.3s ease;
 
-                    &:hover {
-                        transform: scale(1.1);
+                    @include desktop {
+                        transition: transform 0.3s ease;
+
+                        &:hover {
+                            transform: scale(1.1);
+                        }
                     }
                 }
 
